<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.nik.virtualgeocaching.activities.CreateChestActivity">
    <EditText
        android:id="@+id/chestIDText"
        android:hint="@string/chestid"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/radiusText"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:hint="@string/access_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/listed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"/>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/hiddenSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/public_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"/>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/opentoEditSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>
            </LinearLayout>
    <Button
        android:id="@+id/createChestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_chest"
        />

</LinearLayout>
